--- a/View/Customers/Students/AddStudentView.xaml
+++ b/View/Customers/Students/AddStudentView.xaml
@@ -37,8 +37,17 @@
             <ComboBox SelectedValue="{Binding gender}" DisplayMemberPath="Value"  SelectedValuePath="Key" ItemsSource="{Binding genders}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
 
             <StackPanel Grid.Row="1" Grid.Column="1">
-                <TextBox Text="{Binding lastname, Mode=OneWayToSource}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2"/>
-
+                <TextBox Text="{Binding lastname, Mode=OneWayToSource}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2">
+                    <TextBox.Style>
+                        <Style TargetType="{x:Type TextBox}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding validLastname.valid}" Value="false">
+                                    <Setter Property="BorderBrush" Value="Red"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBox.Style>
+                </TextBox>
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
@@ -65,8 +74,18 @@
             </StackPanel>
 
             <StackPanel Grid.Row="2" Grid.Column="1">
-                        <TextBox Text="{Binding firstname, Mode=OneWayToSource}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="2" Grid.Column="1" />
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
+                <TextBox Text="{Binding firstname, Mode=OneWayToSource}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="2" Grid.Column="1" >
+                    <TextBox.Style>
+                        <Style TargetType="{x:Type TextBox}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding validFirstname.valid}" Value="false">
+                                    <Setter Property="BorderBrush" Value="Red"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBox.Style>
+                </TextBox>
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
                             <Style.Triggers>
@@ -91,35 +110,9 @@
                 </TextBlock>
             </StackPanel>
 
-            <ComboBox SelectedValue="{Binding kinship}"  DisplayMemberPath="Value"  SelectedValuePath="Key" ItemsSource="{Binding kinships}" Grid.Row="3" Grid.Column="1" Margin="10,8,10,8" />
-
-            <StackPanel Grid.Column="1" Grid.Row="4">
-                <DatePicker SelectedDate="{Binding birthday, Mode=TwoWay}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Column="1" Grid.Row="4"/>
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
-                    <TextBlock.Style>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding validBirthday}" Value="{x:Null}">
-                                    <Setter Property="Text" Value="Champ obligatoire"/>
-                                    <Setter Property="Foreground" Value="Gray"/>
-                                    <Setter Property="FontStyle" Value="Italic"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding validBirthday.valid}" Value="false">
-                                    <Setter Property="Text" Value="{Binding validBirthday.message}"/>
-                                    <Setter Property="Foreground" Value="Red"/>
-                                    <Setter Property="FontWeight" Value="Bold"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding validBirthday.valid}" Value="true">
-                                    <Setter Property="Text" Value="{Binding validBirthday.message}"/>
-                                    <Setter Property="Foreground" Value="Green"/>
-                                    <Setter Property="FontWeight" Value="Bold"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-            </StackPanel>
-        </Grid>
+            <ComboBox SelectedValue="{Binding kinship}"  DisplayMemberPath="Value"  SelectedValuePath="Key" ItemsSource="{Binding kinships}" Grid.Row="3" Grid.Column="1" Margin="10,8,10,8"    />
+            <DatePicker SelectedDate="{Binding birthday}"  HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Column="1" Grid.Row="4"/>
+         </Grid>
         <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
             <StackPanel Orientation="Horizontal">
                 <Image Source="/PrototypeEDUCOM;component/Ressource/add.png" Width="30" Height="30" />
