--- a/View/Customers/Students/EditStudentView.xaml
+++ b/View/Customers/Students/EditStudentView.xaml
@@ -27,7 +27,7 @@
                 <ColumnDefinition Width="4*"/>
             </Grid.ColumnDefinitions>
 
-            <Label Content="Sex" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="0" />
+            <Label Content="Sexe" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="0" />
             <Label Content="Nom" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="1"/>
             <Label Content="Prénom" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="2"/>
             <Label Content="Parenté" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,10,6" Grid.Row="3"/>
@@ -36,7 +36,17 @@
             <ComboBox SelectedValue="{Binding gender}" DisplayMemberPath="Value"  SelectedValuePath="Key" ItemsSource="{Binding genders}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
 
             <StackPanel Grid.Row="2" Grid.Column="1">
-                <TextBox Text="{Binding firstname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="2" Grid.Column="1" />
+                <TextBox Text="{Binding firstname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="2" Grid.Column="1" >
+                    <TextBox.Style>
+                        <Style TargetType="{x:Type TextBox}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding validFirstname.valid}" Value="false">
+                                    <Setter Property="BorderBrush" Value="Red"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBox.Style>
+                </TextBox>
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
@@ -63,7 +73,17 @@
             </StackPanel>
 
             <StackPanel Grid.Row="1" Grid.Column="1">
-                <TextBox Text="{Binding lastname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="1" Grid.Column="1" />
+                <TextBox Text="{Binding lastname}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Row="1" Grid.Column="1" >
+                    <TextBox.Style>
+                        <Style TargetType="{x:Type TextBox}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding validLastname.valid}" Value="false">
+                                    <Setter Property="BorderBrush" Value="Red"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBox.Style>
+                </TextBox>
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
@@ -91,32 +111,7 @@
 
             <ComboBox SelectedValue="{Binding kinship}" DisplayMemberPath="Value"  SelectedValuePath="Key" ItemsSource="{Binding kinships}" Grid.Row="3" Grid.Column="1" Margin="10,8,10,8" />
 
-            <StackPanel Grid.Column="1" Grid.Row="4">
-                <DatePicker SelectedDate="{Binding birthday}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Column="1" Grid.Row="4"/>
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,0,0,6">
-                    <TextBlock.Style>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding validBirthday}" Value="{x:Null}">
-                                    <Setter Property="Text" Value="Champ obligatoire"/>
-                                    <Setter Property="Foreground" Value="Gray"/>
-                                    <Setter Property="FontStyle" Value="Italic"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding validBirthday.valid}" Value="false">
-                                    <Setter Property="Text" Value="{Binding validBirthday.message}"/>
-                                    <Setter Property="Foreground" Value="Red"/>
-                                    <Setter Property="FontWeight" Value="Bold"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding validBirthday.valid}" Value="true">
-                                    <Setter Property="Text" Value="{Binding validBirthday.message}"/>
-                                    <Setter Property="Foreground" Value="Green"/>
-                                    <Setter Property="FontWeight" Value="Bold"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-            </StackPanel>
+            <DatePicker SelectedDate="{Binding birthday}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Column="1" Grid.Row="4"/>
         </Grid>
         <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
